5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1756_1577.log
== SUBMITION (2019-05-28 21:52:40) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.335332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor=arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:52:43) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:52:56) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:53:18) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:53:40) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:53:44) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.486785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor=arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:53:45) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:57:59) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:11:42) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:11:47) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.503571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor=arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:12:02) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:42:04) 
-- CODE:
from numpy import*
a= float(input("acelaração:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:42:23) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor=arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:42:53) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.615053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:42:54) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:44:47) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.525669
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:45:01) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:45:28) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:45:33) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
b= int(input(":"))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.553149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 6, in <module>
    vetor = arange(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:46:18) 
-- CODE:
from numpy import*
a= float(input("acelaracao:"))
v=float(input("velocidade :"))
n= int(input(":"))

vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + v*t
print(dt)
-- EXECUTION TIME:
0.365593
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
